Changes names of biome controllers to improve clarity

--- a/src/main/resources/assets/mystcraft/lang/en_US.lang
+++ b/src/main/resources/assets/mystcraft/lang/en_US.lang
@@ -74,15 +74,15 @@ linkeffect.intralinking.name=Intra-Linking
 linkeffect.maintainmomentum.name=Maintain Momentum
 linkeffect.relative.name=Relative Link
 
-mystsymbol.BioConGrid.name=Grid-form Biomes
-mystsymbol.BioConHuge.name=Huge Biomes
-mystsymbol.BioConLarge.name=Large Biomes
-mystsymbol.BioConMedium.name=Medium Biomes
-mystsymbol.BioConNative.name=Native Biome Controller
-mystsymbol.BioConSingle.name=Single Biome
-mystsymbol.BioConSmall.name=Small Biomes
-mystsymbol.BioConTiled.name=Tiled Biomes
-mystsymbol.BioConTiny.name=Tiny Biomes
+mystsymbol.BioConGrid.name=Grid-form Biome Distribution
+mystsymbol.BioConHuge.name=Huge Biome Distribution
+mystsymbol.BioConLarge.name=Large Biome Distribution
+mystsymbol.BioConMedium.name=Medium Biome Distribution
+mystsymbol.BioConNative.name=Native Biome Distribution
+mystsymbol.BioConSingle.name=Single Biome Distribution
+mystsymbol.BioConSmall.name=Small Biome Distribution
+mystsymbol.BioConTiled.name=Tiled Biome Distribution
+mystsymbol.BioConTiny.name=Tiny Biome Distribution
 mystsymbol.Caves.name=Caves
 mystsymbol.ColorCloud.name=Cloud Color
 mystsymbol.ColorCloudNat.name=Natural Cloud Color
