Localization for glasses

--- a/src/main/resources/assets/mystcraft/lang/en_US.lang
+++ b/src/main/resources/assets/mystcraft/lang/en_US.lang
@@ -50,6 +50,7 @@ item.myst.unlinkedbook.name=Unlinked Link Book
 item.myst.writingdesk.name=Writing Desk
 item.myst.writingdesk.top.name=Writing Desk Backboard
 item.myst.vial.name=Ink Vial
+item.myst.glasses.name=XComp's Glasses
 
 itemGroup.mystcraft.common=Mystcraft
 itemGroup.mystcraft.pages=Mystcraft Pages
