Adds booster pack item Revises treasure and villager trades Changes hook to catch Mystcraft villager interaction to not do anything (allow trading for now) Pulls localizations from GitHub Moves booster gen to ItemNotebook

--- a/src/main/resources/assets/mystcraft/lang/en_US.lang
+++ b/src/main/resources/assets/mystcraft/lang/en_US.lang
@@ -43,6 +43,7 @@ tile.myst.writing_desk.name=Writing Desk
 item.myst.agebook.name=Descriptive Book
 item.myst.linkbook.name=Linking book
 item.myst.notebook.name=Notebook
+item.myst.booster.name=Sealed Notebook
 item.myst.page.blank.name=Blank Page
 item.myst.page.panel.name=Link Panel Page
 item.myst.page.symbol.name=Page
