--- a/src/main/resources/assets/mystcraft/lang/en_US.lang
+++ b/src/main/resources/assets/mystcraft/lang/en_US.lang
@@ -42,7 +42,8 @@ tile.myst.writing_desk.name=Writing Desk
 
 item.myst.agebook.name=Descriptive Book
 item.myst.linkbook.name=Linking book
-item.myst.notebook.name=Notebook
+item.myst.folder.name=Collation Folder
+item.myst.portfolio.name=Symbol Portfolio
 item.myst.booster.name=Sealed Notebook
 item.myst.page.blank.name=Blank Page
 item.myst.page.panel.name=Link Panel Page
